# thingymcconfig

./: .cproject  .gitignore  .gitmodules  .project  .travis.yml  Makefile  README  README.md  TODO  apps.c  apps.h  args.h  bootstrap.sh  buildconfig.h  buildconfig.h.in  certs.c  client_glib.c  config.c  config.h  ctrl.c  ctrl.h  dhcp4.h  dhcp4_client.c  dhcp4_client.h  dhcp4_model.c  dhcp4_model.h  dhcp4_server.c  dhcp4_server.h  http.c  http.h  ip4.h  jsonbuilderutils.h  logging.c  logging.h  meson.build  meson_options.txt  network.c  network.h  network_dhcp.c  network_dhcp.h  (+19 more)
include/thingymcconfig/: client_glib.h  ctrl.h  utils.h
subprojects/: nlglue.wrap  teenynet.wrap
